@startuml
'https://plantuml.com/sequence-diagram
skinparam style strictuml
skinparam classAttributeIconSize 0
skinparam classFontStyle Bold
hide empty members



class Java2Puml
{
}

class SuperClassUML
{
    -el: Element
    +<<Create>> SuperClasseUML(el: Element)
    +getSuperClassName(): String
    +isInternal(element: TypeMirror): Boolean
}


class ClassPUML
{
    -el: Element
    +<<Create>> EnumPUML(xel: Element)
    +getNomClasse(): String
    +getField(): String
    +getAssociations(): String
    +isPrimitive(e: Element): Boolean
    +getType(e: Element): String
    +getVisibility(element: Element): String
    +getEnd(): String
}


class InterfacePUML
{
    -el: Element
    +<<Create>> InterfacePUML(xel: Element)
    +getNameI(): String
    +getEnd(): String
}


class EnumPUML
{
    -el: Element
    +<<Create>> InterfacePUML(xel: Element)
    +getNameE(): String
    +getConst(): String
    +getEnd(): String
}



class PumlDoclet implements Doclet
{
    +getSupportedOptions() {redefines Doclet::getSupportedOptions}: ?
    +run(environment: DocletEnvironment): Boolean
    creationUml(classes: Element[*])
}


class OptionD implements Doclet.Option
{
    -chemin: String
    +getChemin(): String
}


class OptionOut implements Doclet.Option
{
    -nomFichier: String
    +getNomFichier(): String
}

PumlDoclet  ..>  ClassPUML: <<uses>>
PumlDoclet  ..>  InterfacePUML: <<uses>>
PumlDoclet  ..>  EnumPUML: <<uses>>

PumlDoclet  ..>  OptionD: <<uses>>
PumlDoclet  ..>  OptionOut: <<uses>>

@enduml